# paperback

./: Cargo.toml  README.md  build.rs
.github/workflows/: sample.yaml  test.yaml
generate-fonts/: Cargo.toml  README.md
generate-fonts/src/: generate.rs  lib.rs  metrics.rs
src/: args.rs  header.rs  main.rs  restore.rs
src/create/: layout.rs  mod.rs  render.rs
src/fonts/: data.rs  metrics.rs  mod.rs
tests/: license.rs
